# molecular_qm_orca

./: LICENSE  README.md  __init__.py  orca.py  orca_absorption_spectrum_parser.py  orca_excited_states_parser.py  orca_input.py  orca_main_lib.py  orca_output.py  orca_piecewise.py  orca_restart.py  orca_single_example.py  orca_thermo_parser.py  pyorca.py  pyproject.toml
deprecated/: orca_output.py  orca_piecewise.py  orca_restart.py  orca_single_example.py
lib/: orbital_energies_parser.py  orca_absorption_spectrum_parser.py  orca_excited_states_parser.py  orca_frequency_parser.py  orca_main_lib.py  orca_mayer_parser.py
