[project]
name = "molecular_qm_orca"
version = "0.1.0"
description = "ORCA wrapper"
requires-python = ">=3.12"
dependencies = [
    "molecular_qm_models",
]

[tool.uv.sources]
molecular_qm_models = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["molecular_qm_orca"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."simstack.modules"]
all_modules = "molecular_qm_orca"


